deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: sample
  name: sample-svc
spec: 
  ports: 
    - 
      name: http
      port: 8080
  selector: 
    app: sample
